# AI-Games-Dev-Assignment-2

./: CMakeLists.txt  README.md
resources/time_fantasy/: hallowicons_2.json  knights_3x.json  reaper_blade_3.json
src/: voice-interaction.cpp
src/aipfg/: audio-player.cpp  audio-player.hpp  chat-client.cpp  chat-client.hpp  elevenlabs.cpp  elevenlabs.hpp  http-client.cpp  http-client.hpp  http-streamer.cpp  http-streamer.hpp  imgui-context.hpp  sdl3-audio-recorder.hpp  sdl3-context.hpp  sdl3-fpoint.hpp  sdl3-sprite-animator.hpp  sdl3-sprite-sheet.hpp  sdl3-sprite.hpp  sdl3-typedefs.hpp  whisper-transcriber.hpp
